--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,19 @@ services:
     networks:
       - gen-network
     restart: unless-stopped
+  migration:
+    container_name: migration
+    image: migrate/migrate
+    entrypoint: /bin/sh
+    tty: true
+    volumes:
+      - ./backend/migrations:/migrations
+    working_dir: /migrations
+    depends_on:
+      - db
+      - db-test
+    networks:
+      - gen-network
 
 networks:
   gen-network:
@@ -57,7 +70,7 @@ networks:
 
 volumes:
   postgres_data:
-    # 既存のボリュームを削除して新たに作成する場合は、以下のコマンドを実行：
-    # docker-compose down -v
-    # docker-compose up -d
+  # 既存のボリュームを削除して新たに作成する場合は、以下のコマンドを実行：
+  # docker-compose down -v
+  # docker-compose up -d
   postgres_test_data:
