--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,11 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "pnpm biome format --write ./src"
+    "lint": "pnpm biome format --write ./src",
+    "generate": "orval"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
-    "@tanstack/react-query": "^5.28.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
@@ -23,9 +23,12 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@tailwindcss/postcss": "^4",
+    "@tanstack/react-query": "^5.28.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "axios": "^1.9.0",
+    "orval": "^7.9.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
