--- a/backend/.pre-commit-config.yaml
+++ b/backend/.pre-commit-config.yaml
@@ -2,39 +2,47 @@ repos:
   - repo: local
     hooks:
       - id: go-fmt
-        name: go fmt
-        entry: gofumpt
-        args: [-w]
+        name: go fmt (gofumpt)
+        entry: bash
+        args: [-c, 'cd backend && go run mvdan.cc/gofumpt@latest -w .']
         language: system
         files: \.go$
-        
+
       - id: go-imports
         name: go imports
-        entry: goimports
-        args: [-w, -local, "github.com/AI1411/fullstack-react-go"]
+        entry: bash
+        args: [-c, 'cd backend && go run golang.org/x/tools/cmd/goimports@latest -w -local "github.com/AI1411/fullstack-react-go" .']
         language: system
         files: \.go$
-        
+
       - id: go-vet
         name: go vet
-        entry: go
-        args: [vet, ./...]
+        entry: bash
+        args: [-c, 'cd backend && go vet ./...']
         language: system
         files: \.go$
         pass_filenames: false
-        
+
+      - id: staticcheck
+        name: staticcheck
+        entry: bash
+        args: [-c, 'cd backend && go run honnef.co/go/tools/cmd/staticcheck@latest ./...']
+        language: system
+        files: \.go$
+        pass_filenames: false
+
       - id: golangci-lint
         name: golangci-lint
-        entry: golangci-lint
-        args: [run, --fix]
+        entry: bash
+        args: [-c, 'cd backend && go run github.com/golangci/golangci-lint/cmd/golangci-lint@latest run --fix ./...']
         language: system
         files: \.go$
         pass_filenames: false
-        
+
       - id: go-test
         name: go test
-        entry: go
-        args: [test, ./...]
+        entry: bash
+        args: [-c, 'cd backend && go test ./...']
         language: system
         files: \.go$
         pass_filenames: false
