--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -7,14 +7,16 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "pnpm biome check --write ./src",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate": "orval"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-router": "^1.120.13",
     "@tanstack/router-devtools": "^1.120.13",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
@@ -27,10 +29,13 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "orval": "^7.9.0",
     "postcss": "^8.5.4",
     "tailwindcss": "^4.1.8",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "@tanstack/react-query": "^5.28.4",
+    "axios": "^1.9.0"
   }
 }
