--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -11,11 +11,17 @@
     "generate": "orval"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-router": "^1.120.13",
     "@tanstack/router-devtools": "^1.120.13",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.511.0",
+    "msw": "^2.8.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
