--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -21,16 +21,19 @@
     "msw": "^2.8.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@eslint/js": "^9.25.0",
+    "@tanstack/react-query": "^5.28.4",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.9.0",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
@@ -40,8 +43,6 @@
     "tailwindcss": "^4.1.8",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5",
-    "@tanstack/react-query": "^5.28.4",
-    "axios": "^1.9.0"
+    "vite": "^6.3.5"
   }
 }
