--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -29,6 +29,7 @@
     "@biomejs/biome": "1.9.4",
     "@eslint/js": "^9.25.0",
     "@tanstack/react-query": "^5.28.4",
+    "@types/node": "^22.15.29",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
