--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-router": "^1.120.13",
     "@tanstack/router-devtools": "^1.120.13",
