--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,11 @@ SQL_SLOW_THRESHOLD=1s
 
 # Environment
 ENV=development
+
+# OIDC Authentication
+OIDC_ISSUER=https://accounts.google.com
+OIDC_CLIENT_ID=your-client-id
+OIDC_CLIENT_SECRET=your-client-secret
+OIDC_REDIRECT_URL=http://localhost:8080/auth/callback
+JWT_SECRET=your-jwt-secret
+JWT_EXPIRATION=3600
