--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "generate": "orval"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.1.8",
@@ -24,6 +27,7 @@
     "react-dom": "^19.1.0",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.3.0",
+    "tw-animate-css": "^1.3.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
